2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_enable_iface_with_config): add "up" 
	at the end of the ifconfig call

2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: finished the
	"enable_iface_with_config" directive, it should work with eth, wifi,
	irlan and plip interfaces in linux and freebsd. Got rid of the hideous
	"get_interface_name" hack

2004-11-18  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: began working on the new
	"enable_iface_with_config" directive

2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: fix some functions that got
	broken with the new xml format, only save the interfaces if they
	have changed

2004-11-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in, network-conf.in: added "detect_essids" directive

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_interfaces_set): really delete the
	interfaces that aren't configured.
	* replace.pl.in: somewhat improve interfaces deleting in debian

2004-11-11  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: more silly improvements for storing correctly the
	information

2004-11-10  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: made it able to store again the configuration, still
	some checking has to be done, though

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: removed "wireless_device" tags, they're no longer
	used. (gst_network_get_default_gatewaydev) added.

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: modified XML format for the new
	network tool

2004-11-05  Carlos Garcia Campos <carlosgc@gnome.org>

	* disks-conf.in, partition.pl.in: added DVD support 

2004-11-05  Link Dupont  <link.dupont@gmail.com>

	* platform.pl.in: Added archlinux to the list