@@ -409,7 +409,6 @@ sub filter
   &xml_print ($hash);
 }
 
-
 sub enable_iface
 {
   my ($tool, $iface, $enabled) = @_;
@@ -419,6 +418,11 @@ sub enable_iface
   %dist_attrib = &gst_network_get_interface_replace_table ();
   $iface_set = $dist_attrib{"iface_set"};
   &$iface_set (\%hash, undef, $enabled, 1);
+
+  # small hack for ensuring that the interface is really down
+  # when messing ifup/ifdown/ifconfig calls
+  gst_file_run ("ifconfig $iface down") if ($enabled == 0);
+  
   # Don't forget to do gst_end when the reports are over!
   &gst_report_end ();
   # XML output would come here, but this directive returns no XML.
