@@ -1,3 +1,9 @@
+2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network-conf.in: added a small hack for being sure that the
+	interface is really down when possibly messing ifup/ifdown/ifconfig
+	calls
+
 2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network.pl.in (gst_network_enable_iface_with_config): add "up" 
